force-app/main/default/objects/Archival_Configuration__c/Archival_Configuration__c.object-meta.xml
<CustomObject>
    <label>Archival Configuration</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archival Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>