force-app/main/default/objects/Archival_Configuration__c/fields/Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API_Name__c</fullName>
    <inlineHelpText>Object Name of which archival is related to</inlineHelpText>
    <label>Parent Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>