force-app/main/default/objects/Archival_Configuration__c/fields/Related_Index_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Index_Field_API_Name__c</fullName>
    <inlineHelpText>Index field of child object based on which parent record id is used to fetch related records</inlineHelpText>
    <label>Related Index Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>