force-app/main/default/objects/Archival_Configuration__c/fields/Related_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Name__c</fullName>
    <label>Related List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>