force-app/main/default/objects/Archival_Configuration__c/fields/Related_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_API_Name__c</fullName>
    <inlineHelpText>Object name of child object that is related to parent object</inlineHelpText>
    <label>Related Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>