force-app/main/default/objects/Archival_Configuration__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>