force-app/main/default/objects/Archival_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Object_API_Name__c</columns>
    <columns>Related_Index_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>