force-app/main/default/objects/Archival_Configuration__c/listViews/All_Objects.listView-meta.xml
<ListView>
    <fullName>All_Objects</fullName>
    <columns>NAME</columns>
    <columns>Parent_Object_API_Name__c</columns>
    <columns>Related_Object_API_Name__c</columns>
    <columns>Related_List_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Objects</label>
</ListView>